Linear analytic seems to be working

--- a/vonnessiEvolution001.conf
+++ b/vonnessiEvolution001.conf
@@ -1,10 +1,16 @@
 # Mass measurements are in grams
 # Length measurements are in cm
 
-ken-data {                              #Evans
-  owner-surname = "von Nessi"
+shinken-data {
+  owner {
+    first-name = "Greg"
+    last-name = "von Nessi"
+  }
 
-  creator = "Evolution"
+  metadata {
+    manufacture = "Evolution",
+    steel-type = "CPM3V"
+  }
 
   measurements {
 
@@ -21,167 +27,183 @@ ken-data {                              #Evans
 
       fuchi {
         mass = 25.10
-        length = 1.2
+        height = 1.2
       }
 
       lower-seppa {
         mass = 7.37
-        length = 0.103
+        width = 0.103
       }
 
       tsuba {
         mass = 105.62
-        length = 0.37
+        width = 0.37
       }
 
       upper-seppa {
         mass = 7.21
-        length = 0.115
+        width = 0.115
       }
 
       habaki {
         mass = 35.10
-        ha-side-length = 3.14
-        mune-side-length = 2.57
+        ha-side-height = 3.14
+        mune-side-height = 2.57
       }
 
     }
 
-    blade {
+    toshin {
+
+      mass = 767.17
 
       raw-geometry = [
         {
           x = 76.0
           y = 1.35
-          shinken-section = blade
-          shinken-part-label = kissake-tip
+          shinken-section = kissake
+          shinken-part-label = kissake-saki
         },
         {
           x = 74.2
           y = 1.76
           mihaba = 1.4
           kasane = 0.497
-          shinken-section = blade
-          shinken-part-label = shinogi-end
+          shinogiji = 0
+          shinken-section = kissake
+          shinken-part-label = ko-shinogi-mune-intersection
         },
         {
           x = 72.4
           y = 2.23
           mihaba = 2.15
-          shinken-section = blade
-          shinken-part-label = yokote
+          kasane = 0.473
+          shinogiji = 0.8
+          shinken-section = kissake
+          shinken-part-label = mitsukado-mune-projection
         },
         {
           x = 72.0
           y = 2.3
           mihaba = 2.18
-          shinogi-ji = 0.8
+          shinogiji = 0.8
           kasane = 0.473
-          shinken-section = blade
+          shinken-section = kami
         },
         {
           x = 64.0
           y = 4.2
           mihaba = 2.55
-          shinogi-ji = 0.85
+          shinogiji = 0.85
           kasane = 0.473
-          shinken-section = blade
+          shinken-section = kami
         },
         {
           x = 56.0
           y = 5.8
           mihaba = 2.7
-          shinogi-ji = 0.87
+          shinogiji = 0.87
           kasane = 0.464
-          shinken-section = blade
+          shinken-section = kami
         },
         {
           x = 48.0
           y = 7.23
           mihaba = 2.80
-          shinogi-ji = 0.9
+          shinogiji = 0.9
           kasane = 0.486
-          shinken-section = blade
+          shinken-section = kami
         },
         {
           x = 40.0
           y = 8.5
           mihaba = 2.92
-          shinogi-ji = 1.0
+          shinogiji = 1.0
           kasane = 0.508
-          shinken-section = blade
+          shinken-section = kami
         },
         {
           x = 32.0
           y = 9.5
           mihaba = 3.08
-          shinogi-ji = 1.02
+          shinogiji = 1.02
           kasane = 0.533
-          shinken-section = blade
+          shinken-section = kami
         },
         {
           x = 24.0
           y = 10.3
           mihaba = 3.1
-          shinogi-ji = 1.05
+          shinogiji = 1.05
           kasane = 0.543
-          shinken-section = blade
+          shinken-section = kami
         },
         {
           x = 16.0
           y = 10.92
           mihaba = 3.15
-          shinogi-ji = 1.1
+          shinogiji = 1.1
           kasane = 0.568
-          shinken-section = blade
+          shinken-section = kami
         },
         {
           x = 8.0
           y = 11.27
           mihaba = 3.23
-          shinogi-ji = 1.1
+          shinogiji = 1.1
           kasane = 0.573
-          shinken-section = blade
+          shinken-section = kami
         },
         {
           x = 4.0
           y = 11.4
           mihaba = 3.28
-          shinogi-ji = 1.2
+          shinogiji = 1.2
           kasane = 0.586
-          shinken-section = blade
+          shinken-section = kami
         },
         {
           x = 3.0
           y = 11.4
           mihaba = 3.3
-          shinogi-ji = 1.2
+          shinogiji = 1.2
           kasane = 0.586
-          shinken-section = blade
-          shinken-part-label = ha-machi
+          shinken-section = kami
+          shinken-part-label = hamachi-mune-projection
+        },
+        {
+          x = 3.0
+          y = 11.4
+          mihaba = 3.1
+          shinogiji = 1.2
+          kasane = 0.586
+          shinken-section = machi-gap
+          shinken-part-label = hamachi-mune-projection
         },
         {
           x = 2.6
           y = 11.4
-          shinken-section = blade
-          shinken-part-label = mune-machi
+          mihaba = 3.2
+          shinken-section = machi-gap
+          shinken-part-label = munemachi
         },
         {
           x = 2.6
           y = 11.6
-          shinken-section = tang
+          mihaba = 3.0
+          shinken-section = nakago
+          shinken-part-label = munemachi
         },
         {
           x = 2.0
           y = 11.6
-          shinken-section = tang
+          shinken-section = nakago
           shinken-part-label = coordinate-reflection
         },
         {
           x = 4.0
           y = 15.85
-          mihaba = 3.0
-          shinken-section = tang
+          shinken-section = nakago
           shinken-part-label = coordinate-reflection
           reflected = true
           displaced = true
@@ -189,8 +211,8 @@ ken-data {                              #Evans
         {
           x = 6.0
           y = 15.85
-          shinken-section = tang
-          shinken-part-label = polish-line
+          shinken-section = nakago
+          shinken-part-label = polish-line-mune-intersection
           reflected = true
           displaced = true
         },
@@ -198,7 +220,7 @@ ken-data {                              #Evans
           x = 8.0
           y = 15.85
           mihaba = 2.95
-          shinken-section = tang
+          shinken-section = nakago
           reflected = true
           displaced = true
         },
@@ -206,7 +228,7 @@ ken-data {                              #Evans
           x = 16.0
           y = 15.83
           mihaba = 2.65
-          shinken-section = tang
+          shinken-section = nakago
           reflected = true
           displaced = true
         },
@@ -214,7 +236,7 @@ ken-data {                              #Evans
           x = 24.0
           y = 15.78
           mihaba = 2.45
-          shinken-section = tang
+          shinken-section = nakago
           reflected = true
           displaced = true
         },
@@ -222,23 +244,23 @@ ken-data {                              #Evans
           x = 29.0
           y = 15.63
           mihaba = 2.35
-          shinken-section = tang
-          shinken-part-label = tang-mune-end
+          shinken-section = nakago
+          shinken-part-label = nakago-jiri-mune-intersection
           reflected = true
           displaced = true
         },
         {
           x = 29.6
           y = 16.4
-          shinken-section = tang
-          shinken-part-label = tang-end-point
+          shinken-section = nakago
+          shinken-part-label = nakago-jiri
           reflected = true
           displaced = true
         },
         {
           x = 27.6
           y = 16.85
-          shinken-section = tang
+          shinken-section = nakago
           shinken-part-label = mekugi-ana
           reflected = true
           displaced = true
@@ -246,16 +268,14 @@ ken-data {                              #Evans
         {
           x = 10.3
           y = 17.25
-          shinken-section = tang
+          shinken-section = nakago
           shinken-part-label = mekugi-ana
           reflected = true
           displaced = true
         }
       ]
 
-      mass = 767.17
-
-      balance-beam-meausrements = [
+      balance-beam-measurements = [
         {
           nakago-jiri-position = -1.6
           fulcrum-position = 0.0
@@ -329,98 +349,204 @@ ken-data {                              #Evans
           counter-balance-mass = 729.59
         },
         {
-          kissake-sake-position = -1.6
+          kissaki-saki-position = -1.6
           fulcrum-position = 0.0
           counter-balance-position = 97.6
           counter-balance-mass = 414.10
+          reversed-configuration = true
         },
         {
-          kissake-sake-position = -1.6
+          kissaki-saki-position = -1.6
           fulcrum-position = 0.0
           counter-balance-position = 95
           counter-balance-mass = 423.87
+          reversed-configuration = true
         },
         {
-          kissake-sake-position = -1.6
+          kissaki-saki-position = -1.6
           fulcrum-position = 0.0
           counter-balance-position = 90
           counter-balance-mass = 449.90
+          reversed-configuration = true
         },
         {
-          kissake-sake-position = -1.6
+          kissaki-saki-position = -1.6
           fulcrum-position = 0.0
           counter-balance-position = 85
           counter-balance-mass = 475.66
+          reversed-configuration = true
         },
         {
-          kissake-sake-position = -1.6
+          kissaki-saki-position = -1.6
           fulcrum-position = 0.0
           counter-balance-position = 80
           counter-balance-mass = 505.79
+          reversed-configuration = true
         },
         {
-          kissake-sake-position = -1.6
+          kissaki-saki-position = -1.6
           fulcrum-position = 0.0
           counter-balance-position = 75
           counter-balance-mass = 540.18
+          reversed-configuration = true
         },
         {
-          kissake-sake-position = -1.6
+          kissaki-saki-position = -1.6
           fulcrum-position = 0.0
           counter-balance-position = 70
           counter-balance-mass = 586.31
+          reversed-configuration = true
         },
         {
-          kissake-sake-position = -1.6
+          kissaki-saki-position = -1.6
           fulcrum-position = 0.0
           counter-balance-position = 65
           counter-balance-mass = 624.35
+          reversed-configuration = true
         },
         {
-          kissake-sake-position = -1.6
+          kissaki-saki-position = -1.6
           fulcrum-position = 0.0
           counter-balance-position = 60
           counter-balance-mass = 680.83
+          reversed-configuration = true
         },
         {
-          kissake-sake-position = -1.6
+          kissaki-saki-position = -1.6
           fulcrum-position = 0.0
           counter-balance-position = 55
           counter-balance-mass = 741.62
+          reversed-configuration = true
+        },
+        {
+          kissaki-saki-position = 100
+          fulcrum-position = 46.92
+          counter-balance-position = 0
+          counter-balance-mass = 8.95
+        },
+        {
+          kissaki-saki-position = 100
+          fulcrum-position = 46.92
+          counter-balance-position = 5
+          counter-balance-mass = 9.45
+        },
+        {
+          kissaki-saki-position = 100
+          fulcrum-position = 46.92
+          counter-balance-position = 10
+          counter-balance-mass = 10.43
+        },
+        {
+          kissaki-saki-position = 100
+          fulcrum-position = 46.92
+          counter-balance-position = 15
+          counter-balance-mass = 11.69
+        },
+        {
+          kissaki-saki-position = 100
+          fulcrum-position = 46.92
+          counter-balance-position = 20
+          counter-balance-mass = 13.67
+        },
+        {
+          kissaki-saki-position = 100
+          fulcrum-position = 46.92
+          counter-balance-position = 25
+          counter-balance-mass = 16.71
+        },
+        {
+          kissaki-saki-position = 100
+          fulcrum-position = 46.92
+          counter-balance-position = 30
+          counter-balance-mass = 41.3
+        },
+        {
+          nakago-jiri-position = 100
+          fulcrum-position = 54.5
+          counter-balance-position = 0
+          counter-balance-mass = 2.9
+          reversed-configuration = true
+        },
+        {
+          nakago-jiri-position = 100
+          fulcrum-position = 54.5
+          counter-balance-position = 5
+          counter-balance-mass = 4.8
+          reversed-configuration = true
+        },
+        {
+          nakago-jiri-position = 100
+          fulcrum-position = 54.5
+          counter-balance-position = 10
+          counter-balance-mass = 5.8
+          reversed-configuration = true
+        },
+        {
+          nakago-jiri-position = 100
+          fulcrum-position = 54.5
+          counter-balance-position = 15
+          counter-balance-mass = 7.5
+          reversed-configuration = true
+        },
+        {
+          nakago-jiri-position = 100
+          fulcrum-position = 54.5
+          counter-balance-position = 20
+          counter-balance-mass = 8.2
+          reversed-configuration = true
+        },
+        {
+          nakago-jiri-position = 100
+          fulcrum-position = 54.5
+          counter-balance-position = 25
+          counter-balance-mass = 9.3
+          reversed-configuration = true
+        },
+        {
+          nakago-jiri-position = 100
+          fulcrum-position = 54.5
+          counter-balance-position = 30
+          counter-balance-mass = 14.7
+          reversed-configuration = true
+        },
+        {
+          nakago-jiri-position = 100
+          fulcrum-position = 54.5
+          counter-balance-position = 35
+          counter-balance-mass = 20.6
+          reversed-configuration = true
+        },
+        {
+          nakago-jiri-position = 100
+          fulcrum-position = 54.5
+          counter-balance-position = 40
+          counter-balance-mass = 27.6
+          reversed-configuration = true
         }
       ]
     }
   }
 
   inference-parameters {
-    use-analytic-inference = true
-    gaussian-process-coefficient = 5.0 #1.55
+    recalculate-on-next-run = true
+    use-analytic-inference = false
+    gaussian-process-coefficient = .450 #1.55
     blade-section-parameters = [
       {
-        shinken-part-label = tsuka
-        quadrature-size = 10 #34 #20
-        min-mass = 160
-        max-mass = 300
+        shinken-section = nakago
+        quadrature-size = 5 #34 #20
       },
       {
-        shinken-part-label = tsuba
-        quadrature-size = 5 #5
-        min-mass = 100
-        max-mass = 200
+        shinken-section = kami
+        quadrature-size = 15 #70
       },
       {
-        shinken-part-label = habaki
-        quadrature-size = 5 #5
-        min-mass = 20
-        max-mass = 70
+        shinken-section = kissake
+        quadrature-size = 3
       },
       {
-        shinken-part-label = blade
-        quadrature-size = 20 #70
-      },
-      {
-        shinken-part-label = kissake
-        quadrature-size = 5
+        shinken-section = machi-gap
+        quadrature-size = 3
       }
     ]
 
