Updated for evolution sword measurements

--- a/vonnessiEvolution001.conf
+++ b/vonnessiEvolution001.conf
@@ -529,8 +529,8 @@ shinken-data {
 
   inference-parameters {
     recalculate-on-next-run = true
-    use-analytic-inference = false
-    gaussian-process-coefficient = .450 #1.55
+    use-analytic-inference = true
+    gaussian-process-coefficient = 200 #1.55
     blade-section-parameters = [
       {
         shinken-section = nakago
