--- a/vonnessiEvolution001.conf
+++ b/vonnessiEvolution001.conf
@@ -529,26 +529,7 @@ shinken-data {
 
   inference-parameters {
     recalculate-on-next-run = true
-    use-analytic-inference = true
-    gaussian-process-coefficient = 200 #1.55
-    blade-section-parameters = [
-      {
-        shinken-section = nakago
-        quadrature-size = 5 #34 #20
-      },
-      {
-        shinken-section = kami
-        quadrature-size = 15 #70
-      },
-      {
-        shinken-section = kissake
-        quadrature-size = 3
-      },
-      {
-        shinken-section = machi-gap
-        quadrature-size = 3
-      }
-    ]
+    number-of-point-masses = 20
 
     rotational-fit-tolerance = 1e-10
     inverse-arc-length-convergence-tolerance = 1e-5
