About to delete old inference classes

--- a/vonnessiEvolution001.conf
+++ b/vonnessiEvolution001.conf
@@ -2,14 +2,20 @@
 # Length measurements are in cm
 
 shinken-data {
-  owner {
-    first-name = "Greg"
-    last-name = "von Nessi"
-  }
+
+  next-run-inference-strategy = point-model-analytic-maximum-entropy
 
   metadata {
-    manufacture = "Evolution",
-    steel-type = "CPM3V"
+    manufacture = "Evolution"
+    year-forged = 2022
+    construction {
+      steel-type = "CPM3V"
+      hardening = "TH"
+    }
+    owner {
+      first-name = "Greg"
+      last-name = "von Nessi"
+    }
   }
 
   measurements {
@@ -525,57 +531,5 @@ shinken-data {
         }
       ]
     }
-  }
-
-  inference-parameters {
-    recalculate-on-next-run = true
-    number-of-point-masses = 20
-
-    rotational-fit-tolerance = 1e-10
-    inverse-arc-length-convergence-tolerance = 1e-5
-
-    hookes-and-jeeves-parameters {
-      convergence-threshold = 1e-4
-      number-of-prior-samples-to-set-scale = 100
-    }
-
-    coordinate-slide-parameters {
-      convergence-threshold = 1e-5
-      golden-section-tolerance = 1e-10
-      line-probe-expansion-factor = 2.0
-      number-of-prior-samples-to-set-scale = 100
-    }
-
-    mds-parameters {
-      convergence-threshold = 1e-20
-      expansion-multiplier = 2.0
-      contraction-multiplier = 0.5
-      evaluation-parallelism = 6
-      number-of-prior-samples-to-set-starting-point = 100
-    }
-
-    hmcmc-parameters {
-      steps-between-samples = 100
-      steps-in-dynamics-simulation = 100
-      warmup-step-count = 1000
-      dynamics-simulation-step-size = 1e-5
-      max-step-size-history-for-adjustment = 100
-      target-acceptance-ratio = .99
-      sample-parallelism = 12
-    }
-
-    leapfrogmcmc-parameters {
-      steps-between-samples = 100
-      warmup-step-count = 1000
-      sample-pool-size = 100
-    }
-  }
-
-  visualisation-parameters {
-    sample-count = 20
-    graph-line-increment = 0.01
-    graph-kernel-variance = 0.0005
-    num-x-plot-points = 120
-    num-y-plot-points = 120
   }
 }
