Cleanup of measurements

--- a/vonnessiEvolution001.conf
+++ b/vonnessiEvolution001.conf
@@ -3,7 +3,7 @@
 
 shinken-data {
 
-  next-run-inference-strategy = point-model-analytic-maximum-entropy
+  next-run-inference-strategy = point-model-normal-displacement-maximum-entropy
 
   metadata {
     manufacture = "Evolution"
@@ -226,6 +226,7 @@ shinken-data {
           x = 8.0
           y = 15.85
           mihaba = 2.95
+          shinogiji = 1.0
           shinken-section = nakago
           reflected = true
           displaced = true
@@ -234,6 +235,7 @@ shinken-data {
           x = 16.0
           y = 15.83
           mihaba = 2.65
+          shinogiji = 0.9
           shinken-section = nakago
           reflected = true
           displaced = true
@@ -242,6 +244,7 @@ shinken-data {
           x = 24.0
           y = 15.78
           mihaba = 2.45
+          shinogiji = 0.95
           shinken-section = nakago
           reflected = true
           displaced = true
@@ -250,6 +253,7 @@ shinken-data {
           x = 29.0
           y = 15.63
           mihaba = 2.35
+          shinogiji = 0.95
           shinken-section = nakago
           shinken-part-label = nakago-jiri-mune-intersection
           reflected = true
