About to delete pony config

--- a/pony0001.conf
+++ b/pony0001.conf
@@ -12,6 +12,7 @@ shinken-data {
     uncertainties {
       mass-uncertainty = 0.5
       holder-position-uncertainty = 0.5
+      volumetric-uncertainty-multiplier = 0.1
     }
 
     fittings {
@@ -56,113 +57,140 @@ shinken-data {
         {
           x = 76.0
           y = 1.35
-          shinken-section = kissake
-          shinken-part-label = kissake-saki
+          iori-mihaba = 0.0
+          shinogi-gasane = 0.0
+          kasane = 0.0
+          mihaba = 0.0
+          shinken-section = kissaki
+          shinken-part-label = kissaki-saki
         },
         {
           x = 74.2
           y = 1.76
           mihaba = 1.4
           kasane = 0.497
-          shinogiji = 0
-          shinken-section = kissake
+          shinogi-mihaba = 0.0
+          iori-mihaba = .135
+          shinken-section = kissaki
           shinken-part-label = ko-shinogi-mune-intersection
         },
         {
           x = 72.4
           y = 2.23
           mihaba = 2.15
-          kasane = 0.473
-          shinogiji = 0.8
-          shinken-section = kissake
+          shinogi-gasane = 0.473
+          shinogi-mihaba = 0.8
+          shinken-section = kissaki
           shinken-part-label = mitsukado-mune-projection
         },
         {
           x = 72.0
           y = 2.3
           mihaba = 2.18
-          shinogiji = 0.8
-          kasane = 0.473
+          shinogi-mihaba = 0.8
+          shinogi-gasane = 0.473
+          iori-mihaba = .086
+          kasane = 0.400
+          shinken-section = kami
+        },
+        {
+          x = 68.0
+          y = 3.32
+          iori-mihaba = .066
+          kasane = 0.295
           shinken-section = kami
         },
         {
           x = 64.0
           y = 4.2
           mihaba = 2.55
-          shinogiji = 0.85
-          kasane = 0.473
+          shinogi-mihaba = 0.85
+          shinogi-gasane = 0.473
+          kasane = 0.302
           shinken-section = kami
         },
         {
           x = 56.0
           y = 5.8
           mihaba = 2.7
-          shinogiji = 0.87
-          kasane = 0.464
+          shinogi-mihaba = 0.87
+          shinogi-gasane = 0.464
+          iori-mihaba = .060
+          kasane = 0.335
           shinken-section = kami
         },
         {
           x = 48.0
           y = 7.23
           mihaba = 2.80
-          shinogiji = 0.9
-          kasane = 0.486
+          shinogi-mihaba = 0.9
+          shinogi-gasane = 0.486
+          kasane = 0.379
           shinken-section = kami
         },
         {
           x = 40.0
           y = 8.5
           mihaba = 2.92
-          shinogiji = 1.0
-          kasane = 0.508
+          shinogi-mihaba = 1.0
+          shinogi-gasane = 0.508
+          kasane = 0.424
           shinken-section = kami
         },
         {
           x = 32.0
           y = 9.5
           mihaba = 3.08
-          shinogiji = 1.02
-          kasane = 0.533
+          shinogi-mihaba = 1.02
+          shinogi-gasane = 0.533
+          iori-mihaba = .086
+          kasane = 0.427
           shinken-section = kami
         },
         {
           x = 24.0
           y = 10.3
           mihaba = 3.1
-          shinogiji = 1.05
-          kasane = 0.543
+          shinogi-mihaba = 1.05
+          shinogi-gasane = 0.543
+          kasane = 0.494
           shinken-section = kami
         },
         {
           x = 16.0
           y = 10.92
           mihaba = 3.15
-          shinogiji = 1.1
-          kasane = 0.568
+          shinogi-mihaba = 1.1
+          shinogi-gasane = 0.568
+          kasane = 0.511
           shinken-section = kami
         },
         {
           x = 8.0
           y = 11.27
           mihaba = 3.23
-          shinogiji = 1.1
-          kasane = 0.573
+          shinogi-mihaba = 1.1
+          shinogi-gasane = 0.573
+          kasane = 0.531
           shinken-section = kami
         },
         {
           x = 4.0
           y = 11.4
           mihaba = 3.28
-          shinogiji = 1.2
-          kasane = 0.586
+          shinogi-mihaba = 1.2
+          shinogi-gasane = 0.582
+          kasane = 0.544
           shinken-section = kami
         },
         {
           x = 3.0
           y = 11.4
           mihaba = 3.3
-          shinogiji = 1.2
-          kasane = 0.586
+          shinogi-mihaba = 1.2
+          shinogi-gasane = 0.582
+          kasane = 0.544
+          iori-mihaba = .127
           shinken-section = kami
           shinken-part-label = hamachi-mune-projection
         },
@@ -170,8 +198,10 @@ shinken-data {
           x = 3.0
           y = 11.4
           mihaba = 3.1
-          shinogiji = 1.2
-          kasane = 0.586
+          shinogi-mihaba = 1.2
+          shinogi-gasane = 0.582
+          kasane = 0.544
+          hasaki-gasane = 0.150
           shinken-section = machi-gap
           shinken-part-label = hamachi-mune-projection
         },
@@ -181,6 +211,16 @@ shinken-data {
           mihaba = 3.2
           shinken-section = machi-gap
           shinken-part-label = munemachi
+        },
+        {
+          x = 3.0
+          y = 11.4
+          mihaba = 3.1
+          shinogi-mihaba = 1.2
+          shinogi-gasane = 0.582
+          kasane = 0.544
+          hasaki-gasane = 0.150
+          shinken-section = nakago
         },
         {
           x = 2.6
@@ -215,7 +255,7 @@ shinken-data {
           x = 8.0
           y = 15.85
           mihaba = 2.95
-          shinogiji = 1.0
+          shinogi-mihaba = 1.0
           shinken-section = nakago
           reflected = true
           displaced = true
@@ -224,7 +264,7 @@ shinken-data {
           x = 16.0
           y = 15.83
           mihaba = 2.65
-          shinogiji = 0.9
+          shinogi-mihaba = 0.9
           shinken-section = nakago
           reflected = true
           displaced = true
@@ -233,7 +273,7 @@ shinken-data {
           x = 24.0
           y = 15.78
           mihaba = 2.45
-          shinogiji = 0.95
+          shinogi-mihaba = 0.95
           shinken-section = nakago
           reflected = true
           displaced = true
@@ -242,7 +282,10 @@ shinken-data {
           x = 29.0
           y = 15.63
           mihaba = 2.35
-          shinogiji = 0.95
+          shinogi-mihaba = 0.95
+          shinogi-gasane = 0.511
+          kasane = 0.452
+          hasaki-gasane = 0.090
           shinken-section = nakago
           shinken-part-label = nakago-jiri-mune-intersection
           reflected = true
