Adding Sato config. Pony config will need to be re-done

--- a/sato0001.conf
+++ b/sato0001.conf
@@ -3,7 +3,7 @@
 
 shinken-data {
 
-  metadata-hash = "6d721847c58b8b3f65edbcfe9d3a9c7cfbb9a282e946aeb3f4ef17c2"
+  metadata-hash = "cc59f028a5b0c059d64c3a4e10150ba5781855856c56fed8f8468573"
 
   name = "Wallace"
 
@@ -11,7 +11,7 @@ shinken-data {
 
     uncertainties {
       mass-uncertainty = 1
-      profile-point-uncertainties {
+      point-measurement-uncertainties {
         x = 0
         y = 1
         right-fuller-height = 0.1
@@ -319,6 +319,10 @@ shinken-data {
             translated = true
             rotated = true
           }
+          nakago-jiri-context {
+            ha-side-point = false
+            mune-side-point = true
+          }
         },
         { #Q
           x = 548
@@ -384,6 +388,58 @@ shinken-data {
             reflected = true
             translated = true
             rotated = true
+          }
+        },
+        {
+          x = 758
+          y = 172.5
+          geometric-transformation-context {
+            reflected = true
+            translated = true
+            rotated = true
+          }
+          nakago-jiri-context {
+            ha-side-point = false
+            mune-side-point = true
+          }
+        },
+        {
+          x = 759
+          y = 177
+          geometric-transformation-context {
+            reflected = true
+            translated = true
+            rotated = true
+          }
+          nakago-jiri-context {
+            ha-side-point = true
+            mune-side-point = true
+          }
+        },
+        {
+          x = 758
+          y = 183
+          geometric-transformation-context {
+            reflected = true
+            translated = true
+            rotated = true
+          }
+          nakago-jiri-context {
+            ha-side-point = true
+            mune-side-point = false
+          }
+        },
+        {
+          x = 756
+          y = 187.7
+          geometric-transformation-context {
+            reflected = true
+            translated = true
+            rotated = true
+          }
+          nakago-jiri-context {
+            ha-side-point = true
+            mune-side-point = false
           }
         }
       ]
